# swagger.yaml
@@ -85,6 +85,23 @@ paths:
           description: Successful response
           content:
             application/json: {}
+  /api/v1/auth/forgot-password:
+    post:
+      tags:
+        - auth
+      summary: Forgot Password
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                email: khomynt97@gmail.com
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
   /api/v1/wake-up:
     get:
       tags:
@@ -105,7 +122,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /api/v1/users/:id:
+  /api/v1/users/67a6160fe8c4009b3a15622e:
     get:
       tags:
         - users
